tests/core/build/test_build_report_errors_data/fixtures/test_stderr_could_not_produce_error_diagnostics.golden.txt
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

[<TIMESTAMP>] Starting new buck2 daemon...
[<TIMESTAMP>] Connected to new buck2 daemon.
[<TIMESTAMP>] Buck UI: https://www.internalfb.com/buck2/<UUID>
[<TIMESTAMP>] RE Session: reSessionID-<UUID>
[<TIMESTAMP>] Action failed: root//fail_action:error_handler_failed (<unspecified>) (error_handler_failed)
[<TIMESTAMP>] Remote command returned non-zero exit code 1
[<TIMESTAMP>] Remote action, reproduce with: `frecli cas download-action <DIGEST>`
[<TIMESTAMP>] Stdout: <empty>
[<TIMESTAMP>] Stderr: <empty>
[<TIMESTAMP>]
[<TIMESTAMP>] Could not produce error diagnostics:
Error handler failed: Traceback (most recent call last):
  File <builtin>, in <module>
  * fail_action/fail_action_with_error_handler.bzl:71, in f
      fail("something went wrong")
error: fail: something went wrong
  --> fail_action/fail_action_with_error_handler.bzl:71:9
   |
71 |         fail("something went wrong")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

[<TIMESTAMP>] Cache hits: <CACHE_STATS>
[<TIMESTAMP>] Commands: <COMMAND_STATS>
[<TIMESTAMP>] Network: <NETWORK_STATS>
[<TIMESTAMP>]
[<TIMESTAMP>] BUILD ERRORS (1)
[<TIMESTAMP>] The following actions failed during the execution of this command:
[<TIMESTAMP>] Action failed: root//fail_action:error_handler_failed (<unspecified>) (error_handler_failed)
[<TIMESTAMP>] Remote command returned non-zero exit code 1
[<TIMESTAMP>] Remote action, reproduce with: `frecli cas download-action <DIGEST>`
[<TIMESTAMP>] Stdout: <empty>
[<TIMESTAMP>] Stderr: <empty>
[<TIMESTAMP>]
[<TIMESTAMP>] Could not produce error diagnostics:
Error handler failed: Traceback (most recent call last):
  File <builtin>, in <module>
  * fail_action/fail_action_with_error_handler.bzl:71, in f
      fail("something went wrong")
error: fail: something went wrong
  --> fail_action/fail_action_with_error_handler.bzl:71:9
   |
71 |         fail("something went wrong")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

[<TIMESTAMP>]
BUILD FAILED
Failed to build 'root//fail_action:error_handler_failed (<unspecified>)'
